--- a/style.css
+++ b/style.css
@@ -77,3 +77,17 @@
     margin-top: 5px;
     border-radius: 40px 40px 0 0;
   }
+
+  /* -----------scroll bar ------------------- */
+
+  ::-webkit-scrollbar{
+    width: 10px;
+  }
+  ::-webkit-scrollbar-track{
+    background-color: #c6f5df;
+  }
+  ::-webkit-scrollbar-thumb{
+    background-color: #047857;
+    border: 1px solid #1f2937;
+    border-radius: 20px;
+  }
